# LightSmith

./: .env.example  .gitignore  EXECUTE.md  LangSmith.md  PLAN.md  README.md  docker-compose.yml  requirements.txt
.claude/: settings.local.json
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: README  env.py
backend/alembic/versions/: .gitkeep  cdb5bf900e44_initial_migration_create_runs_table.py
backend/app/: __init__.py  config.py  main.py
backend/app/db/: __init__.py  base.py  repository.py
backend/app/models/: __init__.py  run.py
backend/app/routers/: __init__.py  runs.py  traces.py
backend/app/schemas/: __init__.py  run.py  trace.py
backend/scripts/: README.md  test_api.py
backend/tests/: __init__.py  test_repository.py  test_runs_api.py  test_traces_api.py
execute/: CONCURRENCY_CONTROL.md  EXECUTE_P0.md  EXECUTE_P1.md  EXECUTE_P2.md  EXECUTE_P3.md  EXECUTE_P4.md  README.md
sdk/: pyproject.toml
sdk/cli/: __init__.py  tree_printer.py
sdk/examples/: http_example.py  quick_test.py
sdk/lightsmith/: __init__.py  context.py  decorators.py  models.py
sdk/lightsmith/integrations/: __init__.py
sdk/lightsmith/storage/: __init__.py  http.py  sqlite.py
sdk/tests/: __init__.py  test_context.py  test_decorators.py  test_http.py  test_models.py  test_sqlite.py  test_tree_printer.py
tests/e2e/: README.md  test_docker_e2e.py
