[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "lightsmith"
version = "0.1.0"
description = "Lightweight LLM observability SDK — trace your AI calls locally"
requires-python = ">=3.11"
dependencies = []   # P0 无外部依赖，纯标准库

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",  # P0.2 异步测试需要
]

[tool.setuptools.packages.find]
where = ["."]
include = ["lightsmith*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"   # pytest-asyncio：所有 async 测试函数自动识别
